# django-tutorial-exercise

./: README.md
tutorial-02/mysite/: README.md  pyproject.toml
tutorial-02/mysite/mysite/settings/: common.py  dev.py  prod.py
tutorial-02/mysite/polls/migrations/: 0001_initial.py
